--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assests/css/style.css" />
         <link rel="stylesheet" href="./assests/css/reponsive.css" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Open+Sans:wght@300;400;500;600&family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500&family=Open+Sans:wght@300;400;500;600&family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700&family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
             rel="stylesheet"
         />
     </head>
@@ -27,9 +27,9 @@
                     <div class="title_list">
                         <ul>
                             <li>Drop out ramen hustle</li>
-                            <li>Coworking viral</li>
-                            <li>Crush revenue tr</li>
-                            <li>User bases</li>
+                            <li>Coworking viral landing</li>
+                            <li>Crush revenue traction</li>
+                            <li>User bases minium viable</li>
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
@@ -55,10 +55,13 @@
                     </div>
                     <div class="title_list">
                         <ul>
-                            <li>Drop out ramen hustle</li>
-                            <li>Coworking viral</li>
-                            <li>Crush revenue tr</li>
-                            <li>User bases</li>
+                            <li>
+                                Drop out ramen hustle Drop out ramen hustle Drop
+                                out ramen hustle Drop out ramen hustle
+                            </li>
+                            <li>Coworking viral landing</li>
+                            <li>Crush revenue traction</li>
+                            <li>User bases minium viable</li>
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
@@ -88,9 +91,9 @@
                     <div class="title_list">
                         <ul>
                             <li>Drop out ramen hustle</li>
-                            <li>Coworking viral</li>
-                            <li>Crush revenue tr</li>
-                            <li>User bases</li>
+                            <li>Coworking viral landing</li>
+                            <li>Crush revenue traction</li>
+                            <li>User bases minium viable</li>
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
