sửa lại thẻ li và btn

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
-                    <div class="title_btn ocean">
-                        <button type="">Buy Tour</button>
-                    </div>
+
                     <div class="price">
                         <p>$399</p>
                         <span>Per tour</span>
                     </div>
+                </div>
+                <div class="title_btn ocean">
+                    <button type="">Buy Tour</button>
                 </div>
             </div>
             <div class="price-table">
@@ -55,19 +56,14 @@
                     </div>
                     <div class="title_list">
                         <ul>
-                            <li>
-                                Drop out ramen hustle Drop out ramen hustle Drop
-                                out ramen hustle Drop out ramen hustle
-                            </li>
+                            <li>Drop out ramen hustle</li>
                             <li>Coworking viral landing</li>
                             <li>Crush revenue traction</li>
                             <li>User bases minium viable</li>
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
-                    <div class="title_btn mountain">
-                        <button type="">Buy Tour</button>
-                    </div>
+
                     <div class="price mountain">
                         <p>$449</p>
                         <span>Per tour</span>
@@ -76,6 +72,9 @@
                         <img src="./assests/img/newmark.png" alt="logo" />
                         <span>New</span>
                     </div>
+                </div>
+                <div class="title_btn mountain">
+                    <button type="">Buy Tour</button>
                 </div>
             </div>
             <div class="price-table">
@@ -97,13 +96,14 @@
                             <li>Lorem ipsum dolor</li>
                         </ul>
                     </div>
-                    <div class="title_btn forest">
-                        <button type="">Buy Tour</button>
-                    </div>
+
                     <div class="price forest">
                         <p>$599</p>
                         <span>Per tour</span>
                     </div>
+                </div>
+                <div class="title_btn forest">
+                    <button type="">Buy Tour</button>
                 </div>
             </div>
         </div>
